feat: hdb